--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.tony</groupId>
-	<artifactId>com.tony.spring.boot</artifactId>
+	<groupId>com.chp</groupId>
+	<artifactId>com.chp.springboot</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<!-- 继承父包,此包会添加依赖,spring用到的核心包 -->
 	<parent>
@@ -12,7 +12,7 @@
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.5.2.RELEASE</version>
 	</parent>
-
+	<packaging>war</packaging>
 
 	<dependencies>
 		<dependency>
