--- a/pom.xml
+++ b/pom.xml
@@ -124,11 +124,13 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>2.4.0</version>
 		</dependency>
+		<!-- 本地调试要注释 服务器要放开
 		<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-tomcat</artifactId>
             <scope>provided</scope>
-        </dependency>
+        </dependency> 
+        -->
 	</dependencies>
 
 	<properties>
