--- a/src/main/resources/env/dev/application-db.properties
+++ b/src/main/resources/env/dev/application-db.properties
@@ -1,6 +1,6 @@
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://111.230.187.254:63049/test_data?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&allowMultiQueries=true&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.url=jdbc:mysql://111.230.187.254:63049/bc?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&allowMultiQueries=true&useSSL=false&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
 spring.datasource.password=Chpmysql!@#666
 spring.datasource.name=mysql-test
