--- a/src/main/resources/env/dev/application.properties
+++ b/src/main/resources/env/dev/application.properties
@@ -3,7 +3,8 @@ server.port=8888
 server.context-path=/chp-springboot
 #
 spring.application.name=chp-springboot
-
+#
+config.appshortname=chpspringboot
 #eureka\u6ce8\u518c\u4e2d\u5fc3
 #spring.sleuth.sampler.percentage=1.0
 #
