--- a/src/main/resources/env/dev/application-db.properties
+++ b/src/main/resources/env/dev/application-db.properties
@@ -1,10 +1,9 @@
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://111.230.187.254:63049/bc?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&allowMultiQueries=true&useSSL=false&zeroDateTimeBehavior=convertToNull
-spring.datasource.username=root
-spring.datasource.password=Chpmysql!@#666
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://193.112.80.60:5432/hdsc_db
+spring.datasource.username=broadcast
+spring.datasource.password=w0debr0adcast!
 spring.datasource.name=druid
-
 
 # the connection pool are applied to all of the above data sources 
 spring.datasource.druid.initialSize=5
