--- a/src/main/resources/env/dev/application-redis.properties
+++ b/src/main/resources/env/dev/application-redis.properties
@@ -1,4 +1,3 @@
-      
 default.redis.maxRedirects=3
 #\u8fde\u63a5\u6c60\u4e2d\u6700\u5927\u8fde\u63a5\u6570\u3002\u9ad8\u7248\u672c\uff1amaxTotal\uff0c\u4f4e\u7248\u672c\uff1amaxActive
 default.redis.maxTotal=20
@@ -16,12 +15,11 @@ default.redis.numTestsPerEvictionRun=3
 default.redis.timeBetweenEvictionRunsMillis=-1
 #\u5411\u8c03\u7528\u8005\u8f93\u51fa\u201c\u94fe\u63a5\u201d\u8d44\u6e90\u65f6\uff0c\u662f\u5426\u68c0\u6d4b\u662f\u6709\u6709\u6548\uff0c\u5982\u679c\u65e0\u6548\u5219\u4ece\u8fde\u63a5\u6c60\u4e2d\u79fb\u9664\uff0c\u5e76\u5c1d\u8bd5\u83b7\u53d6\u7ee7\u7eed\u83b7\u53d6\u3002\u9ed8\u8ba4\u4e3afalse\u3002\u5efa\u8bae\u4fdd\u6301\u9ed8\u8ba4\u503c
 default.redis.testOnBorrow=false
-
 #\u8fde\u8d85\u65f6\u8bbe\u7f6e
 default.redis.timeout=15000
 #\u662f\u5426\u4f7f\u7528\u8fde\u63a5\u6c60
 default.redis.usePool = true
 #password
-default.redis.password =w0deredis! 
-#host&port
+default.redis.password =w0deredis!
+#host&port \u591a\u4e2a\u8282\u70b9\u7528"&"\u8fde\u63a5
 default.redis.nodes=193.112.80.60,6379
